--- a/css/style.css
+++ b/css/style.css
@@ -185,9 +185,10 @@ cursor: pointer;
   background-size: cover;
   background-position: center;
   position: relative;
+  mask-image:linear-gradient(rgba(0,0,0,1) 85%,rgba(0,0,0,0));
 }
 
-.hero::after {
+/* .hero::after {
   content: "";
   display: block;
   position: absolute;
@@ -199,11 +200,23 @@ cursor: pointer;
     rgba(1, 1, 3, 1) 8%,
     rgba(255, 255, 255, 0) 50%
   );
+} */
+
+.hero .mask-container {
+  position: absolute;
+  inset: 0;
+  mask-image: url(../img/header-bg\(1\).svg);
+  mask-repeat: no-repeat;
+  mask-size: cover;
+  mask-position: center;
 }
 
 .hero .content {
   padding: 1.4rem 7%;
-  max-width: 60rem;
+  width: 100%;
+  text-align: center;
+  position: fixed;
+  top: 130px;
 }
 
 .hero .content h1 {
@@ -271,6 +284,10 @@ cursor: pointer;
 
 .about .row .about-img img {
   width: 100%;
+  mask-image: url(../img/menu/coffebean.svg);
+  mask-size: 50%;
+  mask-repeat: no-repeat;
+  mask-position: center;
 }
 
 .about .row .content {
