--- a/css/style.css
+++ b/css/style.css
@@ -88,41 +88,54 @@ body {
 /* Navbar search form */
 
 .navbar .search-form {
-    position: absolute;
-    top: 100%;
-    right: 7%;
-    background-color: #fff;
-    width: 50rem;
-    height: 5rem;
-    display: flex;
-    align-items: center;
-    transform: scaleY(0);
-    transform-origin:top;
-    transition: 0.3s;
+  position: absolute;
+  top: 100%;
+  right: 7%;
+  background-color: #fff;
+  width: 50rem;
+  height: 5rem;
+  display: flex;
+  align-items: center;
+  transform: scaleY(0);
+  transform-origin: top;
+  transition: 0.3s;
 }
 
 .navbar .search-form.active {
-    transform: scaleY(1);
+  transform: scaleY(1);
 }
 
 .navbar .search-form input {
-    height: 100%;
-    width: 100%;
-    font-size: 1.6rem;
-    color: var(--bg);
-    padding: 1rem;
-
+  height: 100%;
+  width: 100%;
+  font-size: 1.6rem;
+  color: var(--bg);
+  padding: 1rem;
 }
 
-
 .navbar .search-form label {
-    cursor:pointer;
-    font-size: 2rem;
-    margin-right: 1.5rem;
-    color: var(--bg);
+  cursor: pointer;
+  font-size: 2rem;
+  margin-right: 1.5rem;
+  color: var(--bg);
 }
 
 /* Shopping Cart Section */
+
+#shopping-cart-button {
+  position: relative;
+}
+
+#shopping-cart-button .quantity-badge {
+  display: inline-block;
+  padding: 1px 5px;
+  background-color: red;
+  border-radius: 6px;
+  font-size: 0.8rem;
+  position: absolute;
+  top: 0;
+  right: -10px;
+}
 
 .shopping-cart {
   position: absolute;
@@ -150,30 +163,86 @@ body {
   position: relative;
 }
 
-
 .shopping-cart img {
-  height: 6rem;
+  height: 4rem;
   border-radius: 50%;
 }
 
 .shopping-cart h3 {
-  font-size: 1.6rem;
-  padding-bottom: 0.5rem;
+  font-size: 1.4rem;
 }
 
 .shopping-cart .item-price {
   font-size: 1.2rem;
 }
 
-.shopping-cart .remove-item {
-position: absolute;
-right: 1rem;
-cursor: pointer;
+.shopping-cart .cart-item #add,
+.shopping-cart .cart-item #remove {
+  display: inline-block;
+  padding: 2px 5px;
+  cursor: pointer;
+  margin: 0 8px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  font-size: 1.1rem;
 }
 
-.shopping-cart .remove-item:hover {
-  color: var(--primary);
+.shopping-cart h4 {
+  font-size: 1.6rem;
+  margin-top: -1rem;
+  text-align: center;
 }
+
+/* Checkout Form */
+.form-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  border-top: 1px dashed black;
+  margin-top: 1rem;
+  padding: 1rem;
+}
+
+.form-container h5 {
+  text-align: center;
+  font-size: 1rem;
+}
+
+.form-container form {
+  width: 100%;
+  text-align: center;
+}
+
+.form-container label {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin: 1rem 0;
+}
+
+.form-container span {
+  text-align: right;
+}
+
+.form-container input {
+  background-color: #ddd;
+  padding: 5px;
+  font-size: 1rem;
+  width: 70%;
+}
+
+.form-container .checkout-button {
+  padding: 6px 14px;
+  background-color: royalblue;
+  color: white;
+  font-weight: bold;
+  font-size: 1rem;
+  border-radius: 20px;
+  margin: 1rem auto;
+  cursor: pointer;
+}
+
 /* Hero Section */
 
 .hero {
@@ -185,7 +254,7 @@ cursor: pointer;
   background-size: cover;
   background-position: center;
   position: relative;
-  mask-image:linear-gradient(rgba(0,0,0,1) 85%,rgba(0,0,0,0));
+  mask-image: linear-gradient(rgba(0, 0, 0, 1) 85%, rgba(0, 0, 0, 0));
 }
 
 /* .hero::after {
@@ -353,9 +422,9 @@ cursor: pointer;
 /* Product Section */
 .products .row {
   display: grid;
-grid-template-columns: repeat(auto-fit,minmax(30rem, 1fr));
-gap: 1.5rem;
-margin-top: 4rem;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+  margin-top: 4rem;
 }
 
 .products .product-card {
@@ -406,18 +475,12 @@ margin-top: 4rem;
 }
 
 .products .product-stars .star-full {
-fill: var(--primary);
+  fill: var(--primary);
 }
 
 .products .product-price {
   font-size: 1.3rem;
   font-weight: bold;
-}
-
-.products .product-price span {
-  text-decoration: line-through;
-  font-weight: lighter;
-  font-size: 1rem;
 }
 
 /* Contact Section */
@@ -575,10 +638,9 @@ footer .credit a {
   gap: 1rem;
   width: 12rem;
   background-color: var(--primary);
-  color:#fff;
+  color: #fff;
   margin-top: 1rem;
   padding: 1rem 1.6rem;
-
 }
 /* Media Queries */
 
@@ -629,10 +691,10 @@ footer .credit a {
     transform: scaleX(0.2);
   }
 
-.navbar .search-form {
+  .navbar .search-form {
     width: 90%;
     right: 2rem;
-}
+  }
 
   .about .row {
     flex-wrap: wrap;
@@ -675,7 +737,6 @@ footer .credit a {
 
   .modal-content {
     flex-wrap: wrap;
-
   }
 }
 /* Mobile */
